@@ -856,3 +856,7 @@
 	  extra two bytes of length cause the driver to sometimes read one too many
 	  words from the received FIFO (corrupting the next queued receive packet,
 	  if any).
+	* net/net_poll.c and net/uip/uip_tcpbacklog.c.  Fixed an important race condition
+	  bug in polling for connections.  The logic worked if the poll was inplace
+	  before the connection was received; but the poll failed to awaken if the
+	  connection was already pending in the backlog when poll() was called.
